--- a/coloradohutfinder/package.json
+++ b/coloradohutfinder/package.json
@@ -7,12 +7,11 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "test": "npm run unit",
-    "lint": "eslint --ext .js,.vue src test/unit/specs",
+    "test": "standard --fix && npm run unit",
+    "lint": "standard --fix",
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vee-validate": "^2.0.5",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue2-google-maps": "^0.8.11",
@@ -56,6 +55,7 @@
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "standard": "^11.0.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "uglifyjs-webpack-plugin": "^1.1.1",
