playing with hashing

--- a/coloradohutfinder/package.json
+++ b/coloradohutfinder/package.json
@@ -12,6 +12,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "hash.js": "^1.1.3",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue2-google-maps": "^0.8.11",
